--- a/teststyle.css
+++ b/teststyle.css
@@ -7,11 +7,18 @@
 
 body{
     font-family: 'Nunito', sans-serif;
-    background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    /*background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
     url(Resources/Images/white1.png),url(Resources/Images/nezukobg.jpg);
+    background: url(Resources/Images/nezukobg.jpg);
+    background-attachment:fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;*/
+
+    /*------------------------------------
     background-position: right bottom, left top;
     background-size: contain,contain;
-    background-repeat: no-repeat, no-repeat;
+    background-repeat: no-repeat, no-repeat;*/
 }
 
 
@@ -22,7 +29,7 @@ body{
     background-position: center;
     position:relative;
 }
-/*------------------------------------*/
+
 .nav{
     width: 50%;
     height: 100px;
@@ -71,14 +78,49 @@ nav img{
 
 
 
+.parallax1 {
+    /* The image used */
+    background-image:  url(Resources/Images/white1.png);
+  
+    /* Set a specific height */
+    min-height: 500px;
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.parallax2 {
+/* The image used */
+background-image:  url(Resources/Images/nezukobg.jpg);
 
+/* Set a specific height */
+min-height: 500px;
 
-
-
+/* Create the parallax scrolling effect */
+background-attachment: fixed;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+}
+.parallax3 {
+    /* The image used */
+    background-image:  url(Resources/Images/img_nature_wide.jpg);
+    
+    /* Set a specific height */
+    min-height: 500px;
+    
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 /*-------------BOXES 1-7--------------*/
 .box{
-    margin-top: 150px;
+    margin-top: 0px;
     background-color: rgb(230, 230, 230);
     width:100%;
     height:450px;
