--- a/Pages/activities/activities.css
+++ b/Pages/activities/activities.css
@@ -21,7 +21,7 @@ body{
     background-repeat: no-repeat, no-repeat;*/
 }
 
-
+/*-------------NAV BAR--------------*/
 
 .header{
     background-color: rgb(244, 244, 244);
@@ -89,3 +89,7 @@ body{
 .nav-links ul li:hover::after{
     width:100%;
 }
+
+
+/*-------------TONG QUAN--------------*/
+
