--- a/index.css
+++ b/index.css
@@ -24,7 +24,8 @@ body{
 
 
 .header{
-    background-color: rgb(244, 244, 244);
+    background-color: rgba(244,244,244);
+    /*background-color: rgb(244, 244, 244);*/
     width:100%;
     height:115px;
     display: inline-block;
@@ -94,7 +95,7 @@ body{
 
 .parallax1 {
     /* The image used */
-    background-image:  url(Resources/Images/white1.png);
+    background-image:  url(Resources/Images/wave.png);
   
     /* Set a specific height */
     min-height: 500px;
