--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body{
 
 
 .header{
-    background-color: rgba(244,244,244);
+    background-color: rgba(244,244,244,1);
     /*background-color: rgb(244, 244, 244);*/
     width:100%;
     height:115px;
@@ -95,7 +95,7 @@ body{
 
 .parallax1 {
     /* The image used */
-    background-image:  url(Resources/Images/wave.png);
+    background-image:  url(Resources/Images/bg1.jpg);
   
     /* Set a specific height */
     min-height: 500px;
