--- a/Pages/activities/activities.css
+++ b/Pages/activities/activities.css
@@ -24,9 +24,10 @@ body{
 /*-------------NAV BAR--------------*/
 
 .header{
-    background-color: rgb(244, 244, 244);
+    background-color: rgba(244,244,244,1);
+    /*background-color: rgb(244, 244, 244);*/
     width:100%;
-    height:115px;
+    height:150px;
     display: inline-block;
     background-position: center;
     position:relative;
@@ -45,34 +46,39 @@ body{
 
 .image-box{
     border: 3px rgb(244, 244, 244);
-    padding: 15px;
+    padding: 10px;
+    padding-left: 420px;
     position:absolute;
 }
 
 .image-box img{
-    width:250px;
+    width:130px;
+    height: 130px;
 }
 .nav-links{
     border: 3px rgb(244, 244, 244);
     width:100%;
-    padding:25px;
-    padding-left:0px;
+    padding:60px;
+    padding-left:13%;
     flex:auto;
     text-align: center;
+    
 }
 
 .nav-links ul li{
     list-style: none;
     display: inline-block;
-    padding:12px 12px;
+    padding:0px 12px;
     position: relative;
+    
+
 }
 
 .nav-links ul li a{
     text-align: center;
     color: rgb(0, 0, 0);
     text-decoration: none;
-    font-size: 24px;
+    font-size: 30px;
 
 }
 
@@ -80,7 +86,7 @@ body{
     content:"";
     width:0%;
     height:2px;
-    background: #00dada;
+    background: #a5d3d3;
     display:block;
     margin:auto;
     transition:0.5s;
@@ -89,7 +95,6 @@ body{
 .nav-links ul li:hover::after{
     width:100%;
 }
-
 
 /*-------------Activities--------------*/
 
@@ -115,16 +120,26 @@ body{
 /*-------------Survey--------------*/
 
 .survey{
-    padding:50px;
-    background: rgb(240, 175, 128);
+    padding: 5%;
+    background: rgb(117, 219, 214);
+    text-align: left;
+
 }
 
-.survey p1{
+.survey h1{
+    text-align: center;
+    font-size: 35px;
+
+}
+
+.survey p{
     /*padding-left:50px;
     padding-right:50px;*/
-    font-weight: bold;
+    
     color:rgb(0, 0, 0);
     padding-bottom: 20px;
+    font-size: 20px;
+    
     
 }
 
@@ -140,17 +155,58 @@ body{
     padding-right:50px;*/
     content: "\A\A";
     white-space: pre;
+    
 }
+
+.grid { 
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 0px;
+    align-items: stretch;
+    justify-items: center;
+}
+.grid img {
+    border: 0px solid #000000;
+    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    max-width: 100%;
+}
+
 /*-------------Outreach--------------*/
 .outreach{
     padding:50px;
-    background: lightcoral;
+    background: rgb(222, 222, 222);
+    padding:5%;
+    font-size: 20px;
+
+}
+
+.outreach h1{
+    text-align: center;
+
+}
+.patient-links{
+    flex:auto;
+    text-align: center;
+}
+
+.patient-links ul li{
+    list-style: none;
+    display: inline-block;
+    padding:12px 12px;
+    position: relative;
+}
+
+.patient-links ul li a{
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    font-size: 24px;
+
 }
 
 .outreach p1{
     /*padding-left:50px;
     padding-right:50px;*/
-    font-weight: bold;
+    font-size:20px;
     color:rgb(0, 0, 0);
     padding-bottom: 20px;
     
@@ -170,13 +226,15 @@ body{
     white-space: pre;
 }
 
+
 /*-------------social--------------*/
 .social{
     padding:50px;
-    background: rgb(128, 214, 240);
+    background: rgb(117, 219, 214);
+
 }
 
-.social p1{
+.social h3{
     /*padding-left:50px;
     padding-right:50px;*/
     font-weight: bold;
@@ -185,11 +243,22 @@ body{
     
 }
 
-.social p::after{
+.social h1{
+    text-align: center;
+    font-size: 35px;
+}
+
+.social p1{
+    text-align: center;
+    font-size: 20px;
+}
+
+.social p1::after{
     /*padding-left:50px;
     padding-right:50px;*/
     content: "\A\A";
     white-space: pre;
+    font-size:20px;
 }
 
 .social p3::after{
@@ -202,19 +271,24 @@ body{
 /*-------------seed--------------*/
 .seed{
     padding:50px;
-    background: rgb(240, 231, 128);
+    background: rgb(222, 222, 222);
 }
 
 .seed p1{
     /*padding-left:50px;
     padding-right:50px;*/
-    font-weight: bold;
     color:rgb(0, 0, 0);
     padding-bottom: 20px;
+    font-size:20px;
     
 }
 
-.seed p::after{
+.seed h1{
+    text-align: center;
+    font-size: 35px;
+}
+
+.seed p1::after{
     /*padding-left:50px;
     padding-right:50px;*/
     content: "\A\A";
@@ -231,7 +305,12 @@ body{
 /*-------------fundraiser--------------*/
 .fundraiser{
     padding:50px;
-    background: rgb(128, 240, 141);
+    background: rgb(117, 219, 214);
+}
+
+.fundraiser h1{
+    text-align: center;
+    font-size: 35px;
 }
 
 .fundraiser p1{
@@ -240,6 +319,7 @@ body{
     font-weight: bold;
     color:rgb(0, 0, 0);
     padding-bottom: 20px;
+    font-size: 20px;
     
 }
 
@@ -257,19 +337,20 @@ body{
     white-space: pre;
 }
 
-
+/*padding-left:50px;
+    padding-right:50px;
 
 .image{
     display: block;
     margin-left: auto;
     margin-right: auto;
 
-    /*
+    
     background-color: #33e7ff;
     border-style:solid;
     border-top-color:#000000;
     border-radius: 2px;
-    padding-left:99%;*/
+    padding-left:99%;
 }
 
 .signup ul li{
@@ -281,8 +362,8 @@ body{
 }
 
 .big-paragraph p::after{
-    /*padding-left:50px;
-    padding-right:50px;*/
+    padding-left:50px;
+    padding-right:50px;
     content: "\A\A";
     white-space: pre;
 }
@@ -293,8 +374,10 @@ body{
 }
 
 .big-paragraph2 p::after{
-    /*padding-left:50px;
-    padding-right:50px;*/
+    padding-left:50px;
+    padding-right:50px;
     content: "\A\A";
     white-space: pre;
 }
+
+*/
