--- a/Pages/signup/signup.css
+++ b/Pages/signup/signup.css
@@ -19,15 +19,15 @@ body{
     background-position: right bottom, left top;
     background-size: contain,contain;
     background-repeat: no-repeat, no-repeat;*/
-    background-color: bisque;
+    background-color: rgb(216, 216, 216);
 }
 
 /*-------------NAV BAR--------------*/
-
 .header{
-    background-color: rgb(244, 244, 244);
+    background-color: rgba(244,244,244,1);
+    /*background-color: rgb(244, 244, 244);*/
     width:100%;
-    height:115px;
+    height:150px;
     display: inline-block;
     background-position: center;
     position:relative;
@@ -46,34 +46,39 @@ body{
 
 .image-box{
     border: 3px rgb(244, 244, 244);
-    padding: 15px;
+    padding: 10px;
+    padding-left: 420px;
     position:absolute;
 }
 
 .image-box img{
-    width:250px;
+    width:130px;
+    height: 130px;
 }
 .nav-links{
     border: 3px rgb(244, 244, 244);
     width:100%;
-    padding:25px;
-    padding-left:0px;
+    padding:60px;
+    padding-left:13%;
     flex:auto;
     text-align: center;
+    
 }
 
 .nav-links ul li{
     list-style: none;
     display: inline-block;
-    padding:12px 12px;
+    padding:0px 12px;
     position: relative;
+    
+
 }
 
 .nav-links ul li a{
     text-align: center;
     color: rgb(0, 0, 0);
     text-decoration: none;
-    font-size: 24px;
+    font-size: 30px;
 
 }
 
@@ -81,7 +86,7 @@ body{
     content:"";
     width:0%;
     height:2px;
-    background: #00dada;
+    background: #a5d3d3;
     display:block;
     margin:auto;
     transition:0.5s;
@@ -91,36 +96,27 @@ body{
     width:100%;
 }
 
-
-
-
-
 .section{
     background-color: rgba(177, 94, 255, 0.544);
-    border-style: solid;
-    border-radius: 3px;
-    border-color: black;
     margin:auto;
-    
 }
 
 .total{
-    background-color: rgba(177, 94, 255, 0.544);
-    border-style: solid;
-    border-radius: 3px;
-    border-color: black;
+    background-image: url(../../Resources/decor/bg2.jpg);
     margin:auto;
-    max-width: 50%;
+    max-width: 100%;
     margin:auto;
     padding:50px;
+    text-align: center;
+    height: 48%;
 }
 
-.total p1{
+.total h1{
     /*padding-left:50px;
     padding-right:50px;*/
     font-weight: bold;
     color:rgb(0, 0, 0);
-    padding-bottom: 20px;
+    padding-bottom: 15px;
     
 }
 
@@ -130,3 +126,10 @@ body{
     content: "\A\A";
     white-space: pre;
 }
+
+a { 
+    color: rgb(0, 0, 0);
+}
+
+
+
