--- a/Pages/signup/signup.css
+++ b/Pages/signup/signup.css
@@ -7,22 +7,12 @@
 
 body{
     font-family: 'Nunito', sans-serif;
-    /*background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url(Resources/Images/white1.png),url(Resources/Images/nezukobg.jpg);
-    background: url(Resources/Images/nezukobg.jpg);
-    background-attachment:fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size:cover;*/
-
-    /*------------------------------------
-    background-position: right bottom, left top;
-    background-size: contain,contain;
-    background-repeat: no-repeat, no-repeat;*/
     background-color: rgb(216, 216, 216);
 }
 
 /*-------------NAV BAR--------------*/
+
+
 .header{
     background-color: rgba(244,244,244,1);
     /*background-color: rgb(244, 244, 244);*/
@@ -47,7 +37,7 @@ body{
 .image-box{
     border: 3px rgb(244, 244, 244);
     padding: 10px;
-    padding-left: 420px;
+    padding-left: 485px;
     position:absolute;
 }
 
@@ -95,7 +85,6 @@ body{
 .nav-links ul li:hover::after{
     width:100%;
 }
-
 .section{
     background-color: rgba(177, 94, 255, 0.544);
     margin:auto;
@@ -107,8 +96,9 @@ body{
     max-width: 100%;
     margin:auto;
     padding:50px;
+    padding-top:5%;
     text-align: center;
-    height: 48%;
+    height: 53%;
 }
 
 .total h1{
